Fix spacing issues for the blogs showcase

--- a/components/FilteredBlogs/index.module.scss
+++ b/components/FilteredBlogs/index.module.scss
@@ -3,7 +3,7 @@
 .filteredBlogs {
 	min-width: 34.8rem;
 	height: 28.2rem;
-	margin-bottom: 2rem;
+	margin-bottom: 1.1rem;
 	@media only screen and(max-width: 1080px) {
 		display: none;
 	}
